FACES-1714 Develop Liferay Faces Showcase (Added explanation that inputDate does not have multiple selection feature. Changed quotes to backticks (code) in multiple selection description for pickDate.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
@@ -38,6 +38,8 @@
 						<f:param name="componentUseCase" value="#{correspondingUseCase}" />
 					</h:link>
 					<h:outputText value=" #{i18n['alloy-input-date-benefits-description']}" />
+					<alloy:outputText escape="false" rendered="#{selectedComponentUseCaseName == 'multiple-selection'}"
+						value=" #{i18n['note-multiple-selection-not-available-in-inputdate']}" />
 				</h:panelGroup>
 			</h:panelGrid>
 		</c:if>
