FACES-1714 Develop Liferay Faces Showcase (Added explanation that inputDate does not have multiple selection feature. Changed quotes to backticks (code) in multiple selection description for pickDate.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
@@ -37,7 +37,7 @@
 						<f:param name="componentName" value="inputdate" />
 						<f:param name="componentUseCase" value="#{correspondingUseCase}" />
 					</h:link>
-					<h:outputText value=" #{i18n['alloy-input-date-benefits-description']}" />
+					<h:outputText escape="false" value=" #{i18n['alloy-input-date-benefits-description']}" />
 				</h:panelGroup>
 			</h:panelGrid>
 		</c:if>
