--- a/demos/portal/jsf2-registration-portlet/src/main/webapp/views/registrant.xhtml
+++ b/demos/portal/jsf2-registration-portlet/src/main/webapp/views/registrant.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:aui="http://liferay.com/faces/aui"
 	xmlns:aui-cc="http://liferay.com/faces/aui-cc" xmlns:liferay-ui="http://liferay.com/faces/ui"
 	xmlns:liferay-util="http://liferay.com/faces/util" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:portlet="http://xmlns.jcp.org/portlet_2_0">
+	xmlns:portlet="http://java.sun.com/portlet_2_0">
 	<aui:form id="f">
 		<h1 class="header-title">#{i18n['new-user-registration']}</h1>
 		<aui-cc:messages globalOnly="true" layout="table" />
