FACES-1918 Enable fix-versions.pl script to fix xmlns of composite components in XHTML files

--- a/demos/portal/jsf2-registration-portlet/src/main/webapp/views/registrant.xhtml
+++ b/demos/portal/jsf2-registration-portlet/src/main/webapp/views/registrant.xhtml
@@ -4,7 +4,7 @@
 	xmlns:aui="http://liferay.com/faces/aui" xmlns:aui-cc="http://liferay.com/faces/aui-cc"
 	xmlns:liferay-ui="http://liferay.com/faces/ui"
 	xmlns:liferay-util="http://liferay.com/faces/util"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:portlet="http://xmlns.jcp.org/portlet_2_0">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:portlet="http://java.sun.com/portlet_2_0">
 	<aui:form id="f">
 		<aui:layout>
 			<h1 class="header-title">#{i18n['new-user-registration']}</h1>
