--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/row/column-width/row.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/row/column-width/row.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<h:form>
 		<showcase:example>
