--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/conversion/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/conversion/selectOneRadio.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example description="#{i18n['conversion-to-a-date-using-f-convertdatetime']}">
-				<h4>#{i18n['when-was-the-us-declaration-of-independence-signed']}</h4>
+				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['when-was-the-us-declaration-of-independence-signed']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectOneRadio value="#{selectOneRadioModelBean.date}">
 					<f:convertDateTime pattern="MM/dd/yyyy G" />
