--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/data-model/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/data-model/selectOneRadio.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h4>#{i18n['favorite-liferay-benefit']}</h4>
+				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectOneRadio layout="lineDirection" value="#{selectOneRadioModelBean.favoriteId}">
 					<f:selectItems value="#{selectOneRadioModelBean.liferayBenefits}" var="benefit" itemValue="#{benefit.id}"
 						itemLabel="#{benefit.label}" />
