--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
@@ -6,16 +6,17 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
-				<h4>#{i18n['favorite-liferay-benefit']}</h4>
-				<alloy:selectOneRadio id="selectOneRadio" rendered="#{showcaseModelBean.selectedComponent.rendered}"
-					required="#{showcaseModelBean.selectedComponent.required}" value="#{selectOneRadioModelBean.favoriteId}">
-					<f:selectItem itemLabel="Compatible" itemValue="1" />
-					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
-					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
-					<f:selectItem itemLabel="Lightweight" itemValue="4" />
-					<f:selectItem itemLabel="Open Source" itemValue="5" />
-				</alloy:selectOneRadio>
-				<alloy:message for="selectOneRadio" />
+				<alloy:field label="#{i18n['favorite-liferay-benefit']}">
+					<alloy:selectOneRadio id="selectOneRadio" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+						required="#{showcaseModelBean.selectedComponent.required}" value="#{selectOneRadioModelBean.favoriteId}">
+						<f:selectItem itemLabel="Compatible" itemValue="1" />
+						<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
+						<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
+						<f:selectItem itemLabel="Lightweight" itemValue="4" />
+						<f:selectItem itemLabel="Open Source" itemValue="5" />
+					</alloy:selectOneRadio>
+					<alloy:message for="selectOneRadio" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
