--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/instant-ajax/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/instant-ajax/selectOneRadio.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h4>#{i18n['favorite-liferay-benefit']}</h4>
+				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectOneRadio value="#{selectOneRadioModelBean.favoriteId}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
