--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/general/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/general/selectStarRating.xhtml
@@ -6,17 +6,18 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
-				<h:outputLabel styleClass="alloy-output-label" for="starRating" value="#{i18n['rating']}" />
-				<alloy:selectStarRating id="starRating"
-					rendered="#{showcaseModelBean.selectedComponent.rendered}"
-					required="#{showcaseModelBean.selectedComponent.required}" value="#{selectStarRatingModelBean.favoriteId}">
-					<f:selectItem itemLabel="Compatible" itemValue="1" />
-					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
-					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
-					<f:selectItem itemLabel="Lightweight" itemValue="4" />
-					<f:selectItem itemLabel="Open Source" itemValue="5" />
-				</alloy:selectStarRating>
-				<alloy:message for="starRating" />
+				<alloy:field label="#{i18n['rating']}">
+					<alloy:selectStarRating id="starRating"
+						rendered="#{showcaseModelBean.selectedComponent.rendered}"
+						required="#{showcaseModelBean.selectedComponent.required}" value="#{selectStarRatingModelBean.favoriteId}">
+						<f:selectItem itemLabel="Compatible" itemValue="1" />
+						<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
+						<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
+						<f:selectItem itemLabel="Lightweight" itemValue="4" />
+						<f:selectItem itemLabel="Open Source" itemValue="5" />
+					</alloy:selectStarRating>
+					<alloy:message for="starRating" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
