--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/general/selectThumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/general/selectThumbRating.xhtml
@@ -5,12 +5,16 @@
 
 	<ui:define name="col1">
 		<h:form>
-			<showcase:example>
-				<h:outputLabel styleClass="alloy-output-label" for="starRating" value="#{i18n['rating']}" />
-				<alloy:selectThumbRating value="#{selectThumbRatingModelBean.like}" label="#{i18n['like']}:">
-					<f:selectItem itemLabel="#{i18n['like']}" itemValue="true" />
-					<f:selectItem itemLabel="#{i18n['dislike']}" itemValue="false" />
-				</alloy:selectThumbRating>
+			<showcase:example requiredCheckbox="true" renderedCheckbox="true">
+				<alloy:field label="#{i18n['rating']}">
+					<alloy:selectThumbRating id="thumbRating" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+						required="#{showcaseModelBean.selectedComponent.required}" value="#{selectThumbRatingModelBean.like}"
+						label="#{i18n['like']}:">
+						<f:selectItem itemLabel="#{i18n['like']}" itemValue="true" />
+						<f:selectItem itemLabel="#{i18n['dislike']}" itemValue="false" />
+					</alloy:selectThumbRating>
+					<alloy:message for="thumbRating" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
