FACES-1898 Develop alloy:dialog, alloy:outputTooltip, and alloy:popover components FACES-1714 Develop Liferay Faces Showcase (added use cases for alloy:dialog, alloy:outputTooltip, and alloy:popover)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -6,8 +6,8 @@
 	<ui:define name="col1">
 		<h:form id="myForm" >
 			<showcase:example>
-				<alloy:button id="buttonId" title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
-				<alloy:popover clientKey="popoverKey1" for="buttonId" headerText="#{i18n['header-text']}" position="right" >
+				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
+				<alloy:popover clientKey="popoverKey1" for="myButton" headerText="#{i18n['header-text']}" position="right" >
 					<alloy:field label="#{i18n['text-field']}" >
 						<alloy:inputText value="#{popoverModelBean.text}" />
 					</alloy:field>
