--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
@@ -1,21 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html" 
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets" 
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Using the "for" attribute -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" number="1">
-				<span class="modal-checkbox">
-					<h:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.modal1}">
-						<f:ajax render="@form" />
-					</h:selectBooleanCheckbox>
-					<h:outputLabel value="#{i18n['modal']}" />
-				</span>
-				<alloy:button id="buttonId" title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
-				<alloy:dialog clientKey="dialogKey1" for="buttonId" headerText="#{i18n['header-text']}" modal="#{showcaseModelBean.modal1}" >
-					<alloy:field label="#{i18n['text-field']}" >
+			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" modal1Checkbox="true" number="1">
+				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['show']}" />
+				<alloy:dialog clientKey="dialogKey1" for="myButton" headerText="#{i18n['header-text']}"
+					modal="#{showcaseModelBean.selectedComponent.modal1}">
+					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
@@ -29,21 +24,16 @@
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
-	
+
 	<ui:define name="col2">
 		<!-- Example 2: Using a clientKey and Javascript -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" number="2">
-				<span class="modal-checkbox">
-					<h:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.modal2}">
-						<f:ajax render="@form" />
-					</h:selectBooleanCheckbox>
-					<h:outputLabel value="#{i18n['modal']}" />
-				</span>
-				<alloy:button onclick="Liferay.component('dialogKey2').show(); return false;" 
-					title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
-				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}" modal="#{showcaseModelBean.modal2}" >
-					<alloy:field label="#{i18n['text-field']}" >
+			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" modal2Checkbox="true" number="2">
+				<alloy:button onclick="Liferay.component('dialogKey2').show(); return false;" title="#{i18n['button-title']}"
+					value="#{i18n['show']}" />
+				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}"
+					modal="#{showcaseModelBean.selectedComponent.modal2}">
+					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
