--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
@@ -3,29 +3,30 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Using the value attribute -->
+		<!-- Example 1: Specifying tooltip text via the value attribute -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-outputtooltip-general-example-1']}" number="1" renderedCheckbox="true" >
-				<alloy:button id="button1" value="#{i18n['show-hide']}" />
-				<alloy:outputTooltip for="button1" rendered="#{showcaseModelBean.selectedComponent.rendered}" 
-					value="#{i18n['tooltip-value']}" />
+			<showcase:example description="#{i18n['alloy-outputtooltip-general-example-1']}" number="1"
+				renderedCheckbox="true">
+				<alloy:button id="myButton" value="#{i18n['position-mouse-cursor-here']}" />
+				<alloy:outputTooltip for="myButton" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+					value="#{i18n['text-from-value-attribute']}" />
 			</showcase:example>
 		</h:form>
 	</ui:define>
-	
+
 	<ui:define name="col2">
-		<!-- Example 2: Using the button's title attribute (with optional styleClass) -->
-		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-2']}" number="2" longDescription="true" >
-			<alloy:button id="button2" title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
-			<alloy:outputTooltip for="button2" opacity="0.9" styleClass="tooltip-help" />
+		<!-- Example 2: Specifying tooltip text via the associated component's title attribute -->
+		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-2']}" longDescription="true" number="2">
+			<alloy:inputText id="myText" title="#{i18n['text-from-title-attribute']}" value="#{i18n['position-mouse-cursor-here']}" />
+			<alloy:outputTooltip for="myText" />
 		</showcase:example>
 	</ui:define>
-	
+
 	<ui:define name="col3">
-		<!-- Example 3: Toolip's containing children, (with optional headerText attribute) -->
-		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-3']}" number="3" longDescription="true" >
-			<alloy:button id="button3" title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
-			<alloy:outputTooltip for="button3" headerText="#{i18n['header-text']}"	styleClass="tooltip-help" >
+		<!-- Example 3: Specifying children, headerText, opacity="0.5", and styleClass="tooltip-help" -->
+		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-3']}" longDescription="true" number="3">
+			<alloy:outputText id="myText" value="#{i18n['position-mouse-cursor-here']}" />
+			<alloy:outputTooltip for="myText" headerText="#{i18n['header-text']}" opacity="0.5" styleClass="tooltip-help">
 				<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
 			</alloy:outputTooltip>
 		</showcase:example>
