--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: Using the "for" attribute -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" modal1Checkbox="true" number="1">
-				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['show']}" />
+				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['click-here-to-show-the-dialog']}" />
 				<alloy:dialog clientKey="dialogKey1" for="myButton" headerText="#{i18n['header-text']}"
 					modal="#{showcaseModelBean.selectedComponent.modal1}">
 					<alloy:field label="#{i18n['text-field']}">
@@ -30,7 +30,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-dialog-general-example-2']}" modal2Checkbox="true" number="2">
 				<alloy:button onclick="Liferay.component('dialogKey2').show(); return false;" title="#{i18n['button-title']}"
-					value="#{i18n['show']}" />
+					value="#{i18n['click-here-to-show-the-dialog']}" />
 				<alloy:dialog clientKey="dialogKey2" headerText="#{i18n['header-text']}"
 					modal="#{showcaseModelBean.selectedComponent.modal2}">
 					<alloy:field label="#{i18n['text-field']}">
