--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -1,27 +1,39 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" 
-	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets" 
-	template="/templates/component-2col.xhtml">
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<h:form id="myForm" >
-			<showcase:example>
-				<alloy:button id="myButton" title="#{i18n['button-title']}" value="#{i18n['show-hide']}" />
-				<alloy:popover clientKey="popoverKey1" for="myButton" headerText="#{i18n['header-text']}" position="right" >
-					<alloy:field label="#{i18n['text-field']}" >
+		<!-- Example 1: Specifying autoShow=false (the default) and position=top (the default) -->
+		<h:form id="myForm">
+			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" number="1">
+				<alloy:button id="myButton" value="#{i18n['clicking-here-shows-the-popover']}" />
+				<alloy:popover clientKey="popover1" for="myButton" headerText="#{i18n['header-text']}">
+					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{popoverModelBean.text}" />
 					</alloy:field>
-					<alloy:commandButton action="#{popoverBackingBean.submit}" 
-						onclick="Liferay.component('popoverKey1').hide();" value="#{i18n['submit']}">
+					<alloy:commandButton action="#{popoverBackingBean.submit}" onclick="Liferay.component('popover1').hide();"
+						value="#{i18n['submit']}">
 						<f:ajax execute="@form" render="myForm:outputModel:modelValue" />
 					</alloy:commandButton>
-					<alloy:button onclick="Liferay.component('popoverKey1').hide(); return false;" value="#{i18n['cancel']}" />
+					<alloy:button onclick="Liferay.component('popover1').hide(); return false;" value="#{i18n['cancel']}" />
 				</alloy:popover>
 			</showcase:example>
-			<showcase:outputModel id="outputModel" >
+			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{popoverModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
+	</ui:define>
+
+	<ui:define name="col2">
+		<!-- Example 2: Specifying autoShow=true and position=bottom -->
+		<showcase:example description="#{i18n['alloy-popover-general-example-2']}" number="2">
+			<alloy:button id="myButton" value="#{i18n['clicking-here-does-not-show-the-popover']}" />
+			<alloy:popover autoShow="true" clientKey="popover2" for="myButton" headerText="#{i18n['header-text']}"
+				onclick="Liferay.component('popover2').hide(); return false;" position="bottom">
+				<alloy:outputText value="#{i18n['click-here-to-hide-this-popover']}" />
+			</alloy:popover>
+		</showcase:example>
 	</ui:define>
 
 </ui:composition>
