--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/immediate/selectOneMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/immediate/selectOneMenu.xhtml
@@ -10,21 +10,21 @@
 				longDescription="true" number="1">
 				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectOneRadio immediate="true" layout="pageDirection" value="#{selectOneRadioModelBean.favoriteId}"
-					valueChangeListener="#{selectOneRadioBackingBean.valueChangeListener}">
+				<alloy:selectOneMenu immediate="true" layout="pageDirection" value="#{selectOneMenuModelBean.favoriteId}"
+					valueChangeListener="#{selectOneMenuBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
-				</alloy:selectOneRadio>
+				</alloy:selectOneMenu>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneMenuModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -36,21 +36,21 @@
 				longDescription="true" number="2">
 				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectOneRadio layout="pageDirection" value="#{selectOneRadioModelBean.favoriteId}"
-					valueChangeListener="#{selectOneRadioBackingBean.valueChangeListener}">
+				<alloy:selectOneMenu layout="pageDirection" value="#{selectOneMenuModelBean.favoriteId}"
+					valueChangeListener="#{selectOneMenuBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
-				</alloy:selectOneRadio>
+				</alloy:selectOneMenu>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneMenuModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
