--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: Specifying autoShow=false (the default) and position=top (the default) -->
 		<h:form id="myForm">
-			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" number="1">
+			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" longDescription="true" number="1">
 				<alloy:button id="myButton" value="#{i18n['clicking-here-shows-the-popover']}" />
 				<alloy:popover clientKey="popover1" for="myButton" headerText="#{i18n['header-text']}">
 					<alloy:field label="#{i18n['text-field']}">
@@ -27,11 +27,11 @@
 
 	<ui:define name="col2">
 		<!-- Example 2: Specifying autoShow=true and position=bottom -->
-		<showcase:example description="#{i18n['alloy-popover-general-example-2']}" number="2">
+		<showcase:example description="#{i18n['alloy-popover-general-example-2']}" longDescription="true" number="2">
 			<alloy:button id="myButton" value="#{i18n['clicking-here-does-not-show-the-popover']}" />
 			<alloy:popover autoShow="true" clientKey="popover2" for="myButton" headerText="#{i18n['header-text']}"
-				onclick="Liferay.component('popover2').hide(); return false;" position="bottom">
-				<alloy:outputText value="#{i18n['click-here-to-hide-this-popover']}" />
+				position="bottom">
+				<alloy:outputText value="#{i18n['click-the-x-in-the-header-to-hide-this-popover']}" />
 			</alloy:popover>
 		</showcase:example>
 	</ui:define>
