--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -4,36 +4,50 @@
 	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Specifying autoShow=false (the default) and position=top (the default) -->
+		<!-- Example 1: Automatically show popover and toggle visibility with a button -->
+		<showcase:example description="#{i18n['alloy-popover-general-example-1']}" longDescription="true" number="1">
+			<alloy:button id="myButton1" onclick="Liferay.component('popover1').toggle();"
+				value="#{i18n['click-here-to-toggle-the-popover']}" />
+			<alloy:popover clientKey="popover1" for="myButton1">
+				<alloy:outputText value="#{i18n['this-is-some-popover-text']}" />
+			</alloy:popover>
+		</showcase:example>
+	</ui:define>
+
+	<ui:define name="col2">
+		<!-- Example 2: Show popover when text input receives focus and hide when focus is lost -->
+		<showcase:example description="#{i18n['alloy-popover-general-example-2']}" longDescription="true" number="2">
+			<alloy:inputText id="myButton2" onblur="Liferay.component('popover2').hide();"
+				onfocus="Liferay.component('popover2').show();" value="#{i18n['click-here-and-press-the-tab-key']}" style="width: 300px;"/>
+			<alloy:popover autoShow="false" clientKey="popover2" for="myButton2" onclick="Liferay.component('popover2').hide();"
+				position="right">
+				<alloy:outputText escape="false" value="#{i18n['this-is-some-popover-text']}" />
+			</alloy:popover>
+		</showcase:example>
+	</ui:define>
+
+	<ui:define name="col3">
+		<!-- Example 3: Show popover form when button is clicked and hide when form is submitted -->
 		<h:form id="myForm">
-			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" number="1">
-				<alloy:button id="myButton" value="#{i18n['clicking-here-shows-the-popover']}" />
-				<alloy:popover clientKey="popover1" for="myButton" headerText="#{i18n['header-text']}">
+			<showcase:example description="#{i18n['alloy-popover-general-example-3']}" longDescription="true" number="3">
+				<alloy:button id="myButton3" onclick="Liferay.component('popover3').show();"
+					value="#{i18n['click-here-to-show-the-popover']}" />
+				<alloy:popover autoShow="false" clientKey="popover3" for="myButton3" headerText="#{i18n['header-text']}"
+					position="bottom">
 					<alloy:field label="#{i18n['text-field']}">
 						<alloy:inputText value="#{popoverModelBean.text}" />
 					</alloy:field>
-					<alloy:commandButton action="#{popoverBackingBean.submit}" onclick="Liferay.component('popover1').hide();"
+					<alloy:commandButton action="#{popoverBackingBean.submit}" onclick="Liferay.component('popover3').hide();"
 						value="#{i18n['submit']}">
 						<f:ajax execute="@form" render="myForm:outputModel:modelValue" />
 					</alloy:commandButton>
-					<alloy:button onclick="Liferay.component('popover1').hide(); return false;" value="#{i18n['cancel']}" />
+					<alloy:button onclick="Liferay.component('popover3').hide();" value="#{i18n['cancel']}" />
 				</alloy:popover>
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{popoverModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
-	</ui:define>
-
-	<ui:define name="col2">
-		<!-- Example 2: Specifying autoShow=true and position=bottom -->
-		<showcase:example description="#{i18n['alloy-popover-general-example-2']}" number="2">
-			<alloy:button id="myButton" value="#{i18n['clicking-here-does-not-show-the-popover']}" />
-			<alloy:popover autoShow="true" clientKey="popover2" for="myButton" headerText="#{i18n['header-text']}"
-				onclick="Liferay.component('popover2').hide(); return false;" position="bottom">
-				<alloy:outputText value="#{i18n['click-here-to-hide-this-popover']}" />
-			</alloy:popover>
-		</showcase:example>
 	</ui:define>
 
 </ui:composition>
