--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonelistbox/immediate/selectOneListbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonelistbox/immediate/selectOneListbox.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
@@ -10,14 +10,14 @@
 				longDescription="true" number="1">
 				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectOneRadio immediate="true" layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
+				<alloy:selectOneListbox immediate="true" layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
 					valueChangeListener="#{selectOneBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
-				</alloy:selectOneRadio>
+				</alloy:selectOneListbox>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
@@ -36,14 +36,14 @@
 				longDescription="true" number="2">
 				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectOneRadio layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
+				<alloy:selectOneListbox layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
 					valueChangeListener="#{selectOneBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
-				</alloy:selectOneRadio>
+				</alloy:selectOneListbox>
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
