--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/vertical-layout/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/vertical-layout/selectOneRadio.xhtml
@@ -7,7 +7,7 @@
 		<h:form>
 			<showcase:example>
 				<h:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
-				<alloy:selectOneRadio layout="pageDirection" value="#{selectOneRadioModelBean.favoriteId}">
+				<alloy:selectOneRadio layout="pageDirection" value="#{selectOneModelBean.favoriteId}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
@@ -15,12 +15,12 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</alloy:selectOneRadio>
 				<hr />
-				<alloy:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
+				<alloy:commandButton action="#{selectOneBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
