FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:selectManyMenu, alloy:selectManyListbox, and alloy:selectManyCheckbox)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -106,7 +106,7 @@
 	text-align: center;
 }
 
-.aui .alloy-select-one-radio label {
+.aui .alloy-select-many-checkbox label,.aui .alloy-select-one-radio label {
 	font-size: 0.9em;
 }
 
