FACES-1807 Develop alloy:inputHidden and alloy:inputSecret components FACES-1714 Develop Liferay Faces Showcase (added use cases for alloy:inputHidden and alloy:inputSecret)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -1,3 +1,7 @@
+code {
+	color: rgb(0, 22, 142);
+}
+
 .nav-list > li > a {
 	font-size: 0.9em;
 	white-space: nowrap;
@@ -73,6 +77,10 @@
 .aui span.inline-code {
 	border: 1px solid #cfcfcf;
 	font-family: monospace;
+}
+
+.aui span.inline-warning {
+	color: #ff0000;
 }
 
 .aui .files table {
