FACES-1951 Develop alloy:outputLabel, outputFormat, outputLink, alloy:link, and alloy:commandLink components FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:outputLabel, outputFormat, outputLink, alloy:link, and alloy:commandLink. Added header.xhtml for each component so that each component has the opportunity to have a "note" at the top) FACES-1942 Develop alloy:field component (fixed form submission bug that prevented green color-coding upon validation success)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/immediate/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/immediate/commandButton.xhtml
@@ -1,14 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
-	template="/templates/component-3col.xhtml">
+	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: ActionListener execution when immediate is true -->
 		<h:form>
 			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-true']}" number="1">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:commandButton actionListener="#{commandButtonBackingBean.actionListener}" immediate="true"
+				<alloy:commandButton actionListener="#{commandBackingBean.actionListener}" immediate="true"
 					value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
@@ -21,7 +21,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-false']}" number="2">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:commandButton actionListener="#{commandButtonBackingBean.actionListener}" value="#{i18n['submit']}">
+				<alloy:commandButton actionListener="#{commandBackingBean.actionListener}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
