--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/conversion/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/conversion/selectManyMenu.xhtml
@@ -15,7 +15,7 @@
 					<f:selectItem itemLabel="July 4, 1776 AD" itemValue="07/04/1776 AD" />
 					<f:selectItem itemLabel="July 14, 1789 AD" itemValue="07/14/1789 AD" />
 				</alloy:selectManyMenu>
-				<showcase:note value="#{i18n['note-chromium-issue-4579']}" />
+				<showcase:note iconSize="small" value="#{i18n['note-chromium-issue-4579']}" />
 				<hr />
 				<alloy:commandButton action="#{selectManyBackingBean.submitAnswer}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
