--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/general/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/general/selectManyMenu.xhtml
@@ -17,7 +17,7 @@
 					</alloy:selectManyMenu>
 					<alloy:message for="selectManyMenu" />
 				</alloy:field>
-				<showcase:note value="#{i18n['note-chromium-issue-4579']}" />
+				<showcase:note iconSize="small" value="#{i18n['note-chromium-issue-4579']}" />
 				<hr />
 				<alloy:commandButton action="#{selectManyBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
