--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
@@ -18,7 +18,7 @@
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</alloy:selectManyMenu>
-				<showcase:note value="#{i18n['note-chromium-issue-4579']}" />
+				<showcase:note iconSize="small" value="#{i18n['note-chromium-issue-4579']}" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
