--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/field/general/field.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/field/general/field.xhtml
@@ -4,19 +4,24 @@
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<h:form>
+		<h:form id="myForm">
 			<showcase:example description="#{i18n['alloy-field-general-example-1']}" renderedCheckbox="true">
-				<alloy:messages layout="table" />
-				<alloy:field id="field" label="#{i18n['text-field']}" rendered="#{showcaseModelBean.selectedComponent.rendered}">
-					<alloy:inputText id="inputText" required="true">
+				<alloy:messages globalOnly="true" layout="table" />
+				<alloy:field id="field" label="#{i18n['first-name']}" rendered="#{showcaseModelBean.selectedComponent.rendered}">
+					<alloy:inputText id="firstName" required="true" value="#{fieldModelBean.firstName}">
 						<f:ajax render="field" />
 					</alloy:inputText>
-					<alloy:message for="inputText" />
+					<alloy:icon name="asterisk" />
+					<alloy:message for="firstName" />
 				</alloy:field>
+				<hr />
 				<alloy:commandButton action="#{fieldBackingBean.submit}" value="#{i18n['submit-and-re-render-form']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
+			<showcase:outputModel id="outputModel">
+				<alloy:outputText id="modelValue" value="#{fieldModelBean.firstName}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
