--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/instant-ajax/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/instant-ajax/selectManyMenu.xhtml
@@ -15,7 +15,7 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 					<f:ajax render="@form" />
 				</alloy:selectManyMenu>
-				<showcase:note value="#{i18n['note-chromium-issue-4579']}" />
+				<showcase:note iconSize="small" value="#{i18n['note-chromium-issue-4579']}" />
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:repeat id="modelValue" value="#{selectManyModelBean.favoriteIds}" var="favoriteId">
